ensure footer legible

--- a/_sass/_fresh.sass
+++ b/_sass/_fresh.sass
@@ -166,7 +166,9 @@
 
 
 .site-contact
-  color: $fresh-blue
+  color: white
+  a
+    color: white
   // margin-top: 20px
   // font-family: 'Open Sans'
   // background-color: $fresh-blue
